--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.1",
     "jquery": "^3.6.0",
     "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0",
     "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -44,7 +45,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "node server.js"
+    "start": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
