--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "build":"react-scripts build",
     "test":"react-scripts test",
     "eject":"react-scripts eject",
-    "start":"react-scripts start"
+    "start":"node index.js"
   },
   "eslintConfig": {
     "extends": [
