--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "build":"react-scripts build",
     "test":"react-scripts test",
     "eject":"react-scripts eject",
-    "start":"node index.js"
+    "start":"react-scripts start"
   },
   "eslintConfig": {
     "extends": [
